--- a/src/frontend/src/pages/Home.css
+++ b/src/frontend/src/pages/Home.css
@@ -1,11 +1,17 @@
 body, html {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
-  background-color: black;
-  color: white;
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
+
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .navbar {
@@ -14,9 +20,9 @@ body, html {
   top: 0;
   display: flex;
   justify-content: space-between;
-  padding: 20px 50px;
+  padding: 10px 50px;
   box-sizing: border-box;
-  background: black;
+  background: transparent;
 }
 
 .home {
@@ -25,8 +31,9 @@ body, html {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  padding-top: 100px;
+  padding-top: 50px;
   text-align: center;
+  z-index: 1;
 }
 
 .home-content {
@@ -36,47 +43,62 @@ body, html {
   text-align: center;
   width: 100%;
   justify-content: center;
-  height: 100%;
+  height: 80%;
+  margin-top: -200px;
+  z-index: 1;
 }
 
 .nexus-title {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
+  margin-top: 0;
   width: 100%;
   letter-spacing: 1vw;
+  z-index: 1;
 }
 
 .nexus-title span {
-  font-size: 6rem;
-  color: white;
-  text-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-  animation: glow 2s infinite alternate;
+  font-size: 4rem;
+  color: #00FFFF; 
+  text-shadow: 
+    0 0 5px #00FFFF,
+    0 0 10px #00FFFF,
+    0 0 15px #00FFFF;
+  animation: glow 1.5s infinite alternate;
+  z-index: 1;
 }
 
 @keyframes glow {
   0% {
-    text-shadow: 0 0 20px rgba(255, 255, 255, 0.8), 0 0 30px rgba(255, 255, 255, 0.6);
+    text-shadow: 
+      0 0 10px #00FFFF,
+      0 0 15px #00FFFF,
   }
   100% {
-    text-shadow: 0 0 30px rgba(255, 255, 255, 1), 0 0 40px rgba(255, 255, 255, 0.9);
+    text-shadow: 
+      0 0 15px #00FFFF,
+      0 0 20px #00FFFF,
+
   }
 }
 
 .search-bar {
-  width: 80%;
+  width: 100%;
   max-width: 800px;
   display: flex;
   align-items: center;
   background-color: white;
   border-radius: 50px;
-  padding: 10px 20px;
+  padding: 15px 20px;
   box-sizing: border-box;
+  z-index: 1;
 }
 
 .search-icon {
   color: gray;
   margin-right: 10px;
+  z-index: 1;
 }
 
 .search-bar input {
@@ -86,4 +108,5 @@ body, html {
   font-size: 1rem;
   color: rgba(0, 0, 0, 0.7);
   background: none;
+  z-index: 1;
 }
